<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:weightSum="4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_wifi_foreground"/>
        <org.mmtextview.components.MMTextView
            android:gravity="center"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:maxLines="2"
            android:text="@string/str_txt_wifi_free"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_beach_foreground"/>
        <org.mmtextview.components.MMTextView
            android:gravity="center"
            android:maxLines="2"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/str_txt_sand_beacj"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_coastline_foreground"/>
        <org.mmtextview.components.MMTextView
            android:gravity="center"
            android:maxLines="2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/str_txt_first_cost"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_bar_foreground"/>
        <org.mmtextview.components.MMTextView
            android:gravity="center"
            android:maxLines="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_txt_bar"/>
    </LinearLayout>

</LinearLayout>